# JamaisVu

./: .gitignore  CMakeLists.txt  README.md
cmake_modules/: FindSFML.cmake
src/: main.cpp
src/core/: main.cpp  nnplan.txt
src/core/cli/: AnsiText.h  AnsiTextOptions.h  Console.cpp  Console.h
src/core/genetics/: Gene.h  Generation.h  Genome.h  Species.cpp  Species.h
src/core/network/: Gene.cpp  Gene.h  Generation.cpp  Generation.h  Genome.cpp  Genome.h  Network.cpp  Network.h  Neuron.cpp  Neuron.h  Species.cpp  Species.h
src/core/network/generation/: generation.cpp  generation.h
src/core/network/generation/species/: species.cpp  species.h
src/core/network/generation/species/genome/: Genome.cpp  Genome.h  genome.cpp
src/core/simulation/: Controller.cpp  Controller.h  Player.cpp  Player.h  Simulation.cpp  Simulation.h
src/core/tui/: AnsiText.h  AnsiTextCode.h  Console.cpp  Console.h  TUI.cpp  TUI.h
src/core/util/: Delta.h  Rect.h  Vector2.h  randomUtil.h  toStr.h
